Added other API descriptions and completed testing for mappers, partial implementation for load functionality complete
