# src/main/java/com/xebia/yakshop/models/mappers/LabYakMapper.java
@@ -1,15 +1,17 @@
 package com.xebia.yakshop.models.mappers;
 
-import com.xebia.api.models.LabYak;
+import com.xebia.api.models.LabYakRq;
 import com.xebia.yakshop.models.LabYakInternal;
 import org.mapstruct.Mapper;
+import org.mapstruct.NullValuePropertyMappingStrategy;
 import org.mapstruct.ReportingPolicy;
 import org.mapstruct.factory.Mappers;
 
-@Mapper(unmappedTargetPolicy = ReportingPolicy.IGNORE)
+@Mapper(unmappedTargetPolicy = ReportingPolicy.IGNORE,
+        nullValuePropertyMappingStrategy = NullValuePropertyMappingStrategy.SET_TO_DEFAULT)
 public interface LabYakMapper {
     LabYakMapper INSTANCE = Mappers.getMapper(LabYakMapper.class);
 
-    LabYak toApiModel(LabYakInternal source);
-    LabYakInternal toInternalModel(LabYak source);
+    LabYakRq toApiModel(LabYakInternal source);
+    LabYakInternal toInternalModel(LabYakRq source);
 }
